Added Follower functionality

--- a/Twix.Web/App/index.html
+++ b/Twix.Web/App/index.html
@@ -3,6 +3,7 @@
 <head>
     <title></title>
     <link href="../Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="../Content/font-awesome.min.css" rel="stylesheet" />
 </head>
 <body>
     <div ng-view></div>
@@ -13,5 +14,6 @@
     <script src="Scripts/Main.js"></script>
     <script src="Scripts/HomepageController.js"></script>
     <script src="Scripts/LoginController.js"></script>
+    <script src="Scripts/SignupController.js"></script>
 </body>
 </html>
