Added Retweet and like functionality

--- a/Twix.Web/App/index.html
+++ b/Twix.Web/App/index.html
@@ -4,6 +4,7 @@
     <title></title>
     <link href="../Content/bootstrap.min.css" rel="stylesheet" />
     <link href="../Content/font-awesome.min.css" rel="stylesheet" />
+    <link href="../Content/Twix.css" rel="stylesheet" />
 </head>
 <body>
     <div ng-view></div>
@@ -12,8 +13,10 @@
     <script src="../Scripts/angular.min.js"></script>
     <script src="../Scripts/angular-route.min.js"></script>
     <script src="Scripts/Main.js"></script>
-    <script src="Scripts/HomepageController.js"></script>
+    <!--<script src="Scripts/HomepageController.js"></script>-->
+    <script src="Scripts/HomePageController.js"></script>
     <script src="Scripts/LoginController.js"></script>
     <script src="Scripts/SignupController.js"></script>
+    <script src="Scripts/CreateTweetController.js"></script>
 </body>
 </html>
